--- a/DM2024-Lab1-Master.ipynb
+++ b/DM2024-Lab1-Master.ipynb
@@ -3017,6 +3017,7 @@
     "# find whether elements of a are in b\n",
     "# df[df['a'].isin(df['b'])]\n",
     "# df.query('a not in b')\n",
+    "\n",
     "## use of `==`/ `!=` with `list` objects\n",
     "# X.query('category_name == [\"comp.graphics\"]')\n",
     "# X.query('category_name != [\"comp.graphics\"]')\n",
@@ -3223,25 +3224,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 220,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 1 1]\n",
+      "Index(['A', 'B'], dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([80., 23., 76., 67.])"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "##-------------------------------------\n",
     "### Lookup up values by index/column labels\n",
     "## try with different values\n",
-    "# df = pd.DataFrame({'col': [\"A\", \"A\", \"B\", \"B\"],\n",
-    "#                    'A': [80, 23, np.nan, 22],\n",
-    "#                    'B': [80, 55, 76, 67]})\n",
-    "# idx, cols = pd.factorize(df['col'])\n",
-    "# print(idx)\n",
-    "# print(cols)\n",
-    "# df.reindex(cols, axis=1).to_numpy()[np.arange(len(df)), idx]"
+    "df = pd.DataFrame({'col': [\"A\", \"A\", \"B\", \"B\"],\n",
+    "                   'A': [80, 23, np.nan, 22],\n",
+    "                   'B': [80, 55, 76, 67]})\n",
+    "idx, cols = pd.factorize(df['col'])\n",
+    "print(idx)\n",
+    "print(cols)\n",
+    "df.reindex(cols, axis=1).to_numpy()[np.arange(len(df)), idx]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['alt.atheism', 'soc.religion.christian', 'comp.graphics', 'sci.med',\n",
+       "       'missing'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##-------------------------------------\n",
+    "### Index objects\n",
+    "# idx = pd.Index(['alt.atheism', 'soc.religion.christian', 'comp.graphics', 'sci.med'])\n",
+    "# idx\n",
+    "# X['category_name'].isin(idx)\n",
+    "# idx.rename(\"apple\")\n",
+    "# idx.name = \"orange\"\n",
+    "# idx\n",
+    "\n",
+    "## Find the `union`, `intersection`, `difference`, and `symmetric difference` between two Index objects\n",
+    "# diff_idx = pd.Index(['apple', 'orange', 'banana', 'sci.med'])\n",
+    "# idx.union(diff_idx)\n",
+    "# idx.intersection(diff_idx)\n",
+    "# idx.difference(diff_idx)\n",
+    "# idx.symmetric_difference(diff_idx)\n",
+    "## `Index.fillna` fills missing values with specified scalar value\n",
+    "idx = pd.Index(['alt.atheism', 'soc.religion.christian', 'comp.graphics', 'sci.med', np.nan])\n",
+    "idx\n",
+    "idx.fillna('missing')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -3367,36 +3427,13 @@
        "[2257 rows x 2 columns]"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "#-------------------------------------\n",
-    "### Index objects\n",
-    "# idx = pd.Index(['alt.atheism', 'soc.religion.christian', 'comp.graphics', 'sci.med'])\n",
-    "# idx\n",
-    "# X['category_name'].isin(idx)\n",
-    "# idx.rename(\"apple\")\n",
-    "# idx.name = \"orange\"\n",
-    "# idx\n",
-    "## Find the `union`, `intersection`, `difference`, and `symmetric difference` between two Index objects\n",
-    "# diff_idx = pd.Index(['apple', 'orange', 'banana', 'sci.med'])\n",
-    "# idx.union(diff_idx)\n",
-    "# idx.intersection(diff_idx)\n",
-    "# idx.difference(diff_idx)\n",
-    "# idx.symmetric_difference(diff_idx)\n",
-    "## `Index.fillna` fills missing values with specified scalar value\n",
-    "# idx = pd.Index(['alt.atheism', 'soc.religion.christian', 'comp.graphics', 'sci.med', np.nan])\n",
-    "# idx\n",
-    "# idx.fillna('missing')\n",
-    "\n",
-    "#-------------------------------------\n",
+    "##-------------------------------------\n",
     "### Set and reset the index\n",
     "X2 = X.copy()\n",
     "# X2.set_index('category_name')\n",
@@ -3409,19 +3446,41 @@
     "# X2.reset_index()\n",
     "## If contain mutiple levels, use `level` to control which levels are removed\n",
     "X2 = X2.set_index(['category_name', 'category'])\n",
-    "X2.reset_index(level=1)\n",
-    "\n",
-    "#-------------------------------------\n",
+    "X2.reset_index(level=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    b\n",
+       "1    f\n",
+       "2    j\n",
+       "3    n\n",
+       "Name: (one, second), dtype: object"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##-------------------------------------\n",
     "### Returning a view versus a copy\n",
     "## Our data only contian 1 index, so we cannot see the difference\n",
-    "# dfmi = pd.DataFrame([list('abcd'),\n",
-    "#                      list('efgh'),\n",
-    "#                      list('ijkl'),\n",
-    "#                      list('mnop')],\n",
-    "#                     columns=pd.MultiIndex.from_product([['one', 'two'],\n",
-    "#                                                         ['first', 'second']]))\n",
-    "# dfmi['one']['second']\n",
-    "# dfmi.loc[:, ('one', 'second')]\n",
+    "dfmi = pd.DataFrame([list('abcd'),\n",
+    "                     list('efgh'),\n",
+    "                     list('ijkl'),\n",
+    "                     list('mnop')],\n",
+    "                    columns=pd.MultiIndex.from_product([['one', 'two'],\n",
+    "                                                        ['first', 'second']]))\n",
+    "dfmi['one']['second']\n",
+    "dfmi.loc[:, ('one', 'second')]\n",
     "\n",
     "## The recommended way to obtain a view is to use .loc or .iloc\n",
     "##---reason---\n",
@@ -3444,13 +3503,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 226,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                  text  category category_name\n",
+      "7    From: aldridge@netcom.com (Jacquelin Aldridge)...         2       sci.med\n",
+      "49   From: jimj@contractor.EBay.Sun.COM (Jim Jones)...         2       sci.med\n",
+      "82   From: jason@ab20.larc.nasa.gov (Jason Austin) ...         2       sci.med\n",
+      "118  From: rogers@calamari.hi.com (Andrew Rogers) S...         2       sci.med\n",
+      "142  From: lady@uhunix.uhcc.Hawaii.Edu (Lee Lady) S...         2       sci.med\n"
+     ]
+    }
+   ],
    "source": [
-    "# Answer here"
+    "# Answer here\n",
+    "print(X[X['category_name']=='sci.med'].iloc[::10][0:5])"
    ]
   },
   {
@@ -3511,7 +3584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -3629,7 +3702,7 @@
        "[2257 rows x 3 columns]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3648,7 +3721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -3704,7 +3777,7 @@
        "1                                   0  "
       ]
      },
-     "execution_count": 174,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3740,11 +3813,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 230,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       (The amoung of missing records is: , 0)\n",
+       "1       (The amoung of missing records is: , 0)\n",
+       "2       (The amoung of missing records is: , 0)\n",
+       "3       (The amoung of missing records is: , 0)\n",
+       "4       (The amoung of missing records is: , 0)\n",
+       "                         ...                   \n",
+       "2252    (The amoung of missing records is: , 0)\n",
+       "2253    (The amoung of missing records is: , 0)\n",
+       "2254    (The amoung of missing records is: , 0)\n",
+       "2255    (The amoung of missing records is: , 0)\n",
+       "2256    (The amoung of missing records is: , 0)\n",
+       "Length: 2257, dtype: object"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Answer here"
+    "# Answer here\n",
+    "# axis=1 checks for missing values in rows, axis=0 (default) checks for missing values in columns\n",
+    "X.isnull().apply(lambda x: dmh.check_missing_values(x), axis=1)"
    ]
   },
   {
@@ -3765,7 +3862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3774,7 +3871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -3785,7 +3882,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3796,7 +3893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -3839,7 +3936,7 @@
        "0  dummy_record        1"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3852,7 +3949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3861,7 +3958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -3870,7 +3967,7 @@
        "2258"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3889,7 +3986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -3945,7 +4042,7 @@
        "1                                   1  "
       ]
      },
-     "execution_count": 181,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3963,7 +4060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3975,7 +4072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3984,7 +4081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -3993,7 +4090,7 @@
        "2258"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4004,7 +4101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -4060,7 +4157,7 @@
        "1                                   1  "
       ]
      },
-     "execution_count": 185,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4078,11 +4175,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X.dropna(inplace=True)"
+    "X.dropna(inplace=True)\n",
+    "# inplace=True -> Modify the DataFrame in place (do not create a new object)"
    ]
   },
   {
@@ -4094,7 +4192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -4150,7 +4248,7 @@
        "1                                   0  "
       ]
      },
-     "execution_count": 187,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4161,7 +4259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -4170,7 +4268,7 @@
        "2257"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4213,7 +4311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -4286,7 +4384,7 @@
        "5  F                "
       ]
      },
-     "execution_count": 189,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4307,7 +4405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -4322,7 +4420,7 @@
        "Name: missing_example, dtype: bool"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4333,11 +4431,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here\n"
+    "# Answer here\n",
+    "# For null values, it means that there is no value assign to the variable\n",
+    "\n",
+    "## Considered as missing value\n",
+    "# id 'A' being considered as missing value is because it is numpy.nan, which is a missing value\n",
+    "# id 'B' being considered as missing value is because it does not have any value\n",
+    "# id 'E' being considered as missing value is because it is a None (in Python, `None` is considered as null)\n",
+    "\n",
+    "## Not considered as missing value\n",
+    "# id 'C' being not considered as missing value is because it is a string 'NaN'\n",
+    "# id 'D' being not considered as missing value is because it is a string 'None'\n",
+    "# id 'F' being not considered as missing value is because it is an empty string"
    ]
   },
   {
