--- a/DM2024-Lab1-Master.ipynb
+++ b/DM2024-Lab1-Master.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4473,7 +4473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -4493,7 +4493,7 @@
        "Length: 2257, dtype: bool"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4511,7 +4511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -4520,7 +4520,7 @@
        "0"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4538,7 +4538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -4547,7 +4547,7 @@
        "0"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4565,7 +4565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4583,7 +4583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4592,7 +4592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4601,7 +4601,7 @@
        "2259"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4612,7 +4612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -4621,7 +4621,7 @@
        "1"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4639,16 +4639,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X.drop_duplicates(keep=False, inplace=True) # inplace applies changes directly on our dataframe"
+    "X.drop_duplicates(keep=False, inplace=True) # inplace applies changes directly on our dataframe\n",
+    "# keep=False -> Drop all duplicates\n",
+    "# keep=True  -> Keep the first occurrence of duplicates\n",
+    "# inplace=True -> Modify the DataFrame in place (do not create a new object)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -4657,7 +4660,7 @@
        "2257"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4715,7 +4718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4724,7 +4727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -4733,7 +4736,7 @@
        "1000"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4744,7 +4747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -4775,28 +4778,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>180</th>\n",
-       "      <td>From: vonwaadn@kuhub.cc.ukans.edu Subject: Pan...</td>\n",
+       "      <th>1117</th>\n",
+       "      <td>From: filipe@vxcrna.cern.ch (VINCI) Subject: R...</td>\n",
        "      <td>2</td>\n",
        "      <td>sci.med</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1227</th>\n",
-       "      <td>From: anthropo@carina.unm.edu (Dominick V. Zur...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>alt.atheism</td>\n",
+       "      <th>418</th>\n",
+       "      <td>From: Eugene.Bigelow@ebay.sun.com (Geno ) Subj...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>soc.religion.christian</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1705</th>\n",
-       "      <td>From: david@stat.com (David Dodell) Subject: H...</td>\n",
+       "      <th>683</th>\n",
+       "      <td>From: mmm@cup.portal.com (Mark Robert Thorson)...</td>\n",
        "      <td>2</td>\n",
        "      <td>sci.med</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1805</th>\n",
-       "      <td>From: kmr4@po.CWRU.edu (Keith M. Ryan) Subject...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>alt.atheism</td>\n",
+       "      <th>1938</th>\n",
+       "      <td>From: lhep_ltd@uhura.cc.rochester.edu (Leonida...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>soc.religion.christian</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4804,19 +4807,19 @@
       ],
       "text/plain": [
        "                                                   text  category  \\\n",
-       "180   From: vonwaadn@kuhub.cc.ukans.edu Subject: Pan...         2   \n",
-       "1227  From: anthropo@carina.unm.edu (Dominick V. Zur...         0   \n",
-       "1705  From: david@stat.com (David Dodell) Subject: H...         2   \n",
-       "1805  From: kmr4@po.CWRU.edu (Keith M. Ryan) Subject...         0   \n",
+       "1117  From: filipe@vxcrna.cern.ch (VINCI) Subject: R...         2   \n",
+       "418   From: Eugene.Bigelow@ebay.sun.com (Geno ) Subj...         3   \n",
+       "683   From: mmm@cup.portal.com (Mark Robert Thorson)...         2   \n",
+       "1938  From: lhep_ltd@uhura.cc.rochester.edu (Leonida...         3   \n",
        "\n",
-       "     category_name  \n",
-       "180        sci.med  \n",
-       "1227   alt.atheism  \n",
-       "1705       sci.med  \n",
-       "1805   alt.atheism  "
+       "               category_name  \n",
+       "1117                 sci.med  \n",
+       "418   soc.religion.christian  \n",
+       "683                  sci.med  \n",
+       "1938  soc.religion.christian  "
       ]
      },
-     "execution_count": 203,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4842,11 +4845,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here\n"
+    "# Answer here\n",
+    "# X_sample will randomly select 1000 data from X, so the column will have the same order as X,\n",
+    "# which is in the order of [index, text, category, category_name]\n",
+    "\n",
+    "# The order of X_sample is random, so the index is not in order.\n",
+    "# Because sample() will randomly select the data from the dataset for each sample point,\n",
+    "# so the index will not be in order.\n",
+    "\n",
+    "# Using sample() will not have duplicates (seen the next cell), because the default value of replace is False.\n",
+    "# If we want to have duplicates, we can set replace=True.\n",
+    "\n",
+    "# Using sample() with random_state will have the same result every time we run the code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(X_sample.duplicated())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>category</th>\n",
+       "      <th>category_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>561</th>\n",
+       "      <td>From: ray@engr.LaTech.edu (Bill Ray) Subject: ...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>sci.med</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>440</th>\n",
+       "      <td>From: jkellett@netcom.com (Joe Kellett) Subjec...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>soc.religion.christian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1513</th>\n",
+       "      <td>From: noring@netcom.com (Jon Noring) Subject: ...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>sci.med</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1360</th>\n",
+       "      <td>From: fraseraj@dcs.glasgow.ac.uk (Andrew J Fra...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>soc.religion.christian</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   text  category  \\\n",
+       "561   From: ray@engr.LaTech.edu (Bill Ray) Subject: ...         2   \n",
+       "440   From: jkellett@netcom.com (Joe Kellett) Subjec...         3   \n",
+       "1513  From: noring@netcom.com (Jon Noring) Subject: ...         2   \n",
+       "1360  From: fraseraj@dcs.glasgow.ac.uk (Andrew J Fra...         3   \n",
+       "\n",
+       "               category_name  \n",
+       "561                  sci.med  \n",
+       "440   soc.religion.christian  \n",
+       "1513                 sci.med  \n",
+       "1360  soc.religion.christian  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_sample = X.sample(n=1000, random_state=42)\n",
+    "X_sample[0:4]"
    ]
   },
   {
