--- a/DM2024-Lab1-Master.ipynb
+++ b/DM2024-Lab1-Master.ipynb
@@ -5283,6 +5283,8 @@
     "X_sample_xaxis = [x+(width/2) for x in range(len(categories))]\n",
     "\n",
     "# plot barchart for X and X_sample\n",
+    "# plot in the order of categories\n",
+    "##########!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! error !!!!!!!!!!!!!!!!!!!!!!!!!####################\n",
     "plt.bar(X_xaxis, X.category_name.value_counts(),\n",
     "        width, label = 'X', alpha = 0.5)\n",
     "plt.bar(X_sample_xaxis, X_sample.category_name.value_counts(),\n",
